refactor: Improve sequence validation error message with detailed model and chain information