@@ -467,16 +467,22 @@ public class TaskProcessorService {
 
     // Check if all models have the same sequence
     if (analyzedModels.stream().allMatch(Objects::nonNull)) {
-      var sequences =
-          analyzedModels.stream().map(AnalyzedModel::residueIdentifiers).distinct().toList();
+      // Group models by their sequence
+      var modelsBySequence = analyzedModels.stream()
+          .collect(Collectors.groupingBy(
+              model -> model.structure3D().chains().stream()
+                  .map(chain -> chain.identifier() + ": " + chain.sequence())
+                  .collect(Collectors.joining(", ")),
+              Collectors.mapping(AnalyzedModel::name, Collectors.toList())));
 
-      if (sequences.size() > 1) {
+      if (modelsBySequence.size() > 1) {
         logger.error("Models have different nucleotide composition");
-        var message =
-            "Models have different nucleotide composition. Found nucleotides: "
-                + String.join(
-                    ", ", sequences.stream().map(List::toString).collect(Collectors.joining(", ")));
-        throw new RuntimeException(message);
+        var message = new StringBuilder("Models have different sequences:\n");
+        modelsBySequence.forEach((sequence, models) -> {
+          message.append("\nSequence: ").append(sequence);
+          message.append("\nModels: ").append(String.join(", ", models));
+        });
+        throw new RuntimeException(message.toString());
       }
     }
 
